--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	 *************************************************** -->
 	<meta charset="UTF-8">
 	<meta name="description" content="vCard for David Fiske">
-	<meta name="keywords" content="David Fiske, vCard, Web Development, Systems Analyst, Software Development">
+	<meta name="keywords" content="David Fiske, vCard, Web Developer, Systems Analyst, Software Developer">
 	<meta name="author" content="David Fiske">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
