--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				*************************** -->
 				<div>
 					<h1>David Fiske</h1>
-					<p>Web Development | Systems Analyst | Software Development</p>
+					<p>Web Developer | Systems Analyst | Software Developer</p>
 				</div>
 
 			</div>
